src/app/app.scss
$menu-frame-bg: #437286;

body {
    margin: 0px;
}

@mixin menu-border {
    >div {
        background-color: $menu-frame-bg;
        height: 100%;
        border-right: 4px solid #00000055;
        border-left: 4px solid #FFFFFFCC;
    }
}

.App {
    width: 100%;
    height: 100vh;

    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-size: 24px;

    color: lightgrey;
    text-shadow: 2px 2px black;
    background-color: black;

    .team {
        display: inline-flex;
        flex-direction: row;
        position: static;
        float: right;

        $frame-width: 256px;
        $frame-height: 144px;
        $frame-bw: 16px;

        >div {
            @mixin player-border {
                @include menu-border;

                >div:hover:before {
                    content: '\A';
                    position: absolute;
                    width: ($frame-width)-($frame-bw*0.5);
                    height: $frame-height;
                    background: rgba(0, 0, 0, 0.6);
                    // opacity: 1;
                    // transition: all 1s;
                }
            }

            >div {
                padding-left: 16px;

                >div {
                    display: inline-block;
                    transform: translate(0, -20px);
                    background-color: $menu-frame-bg;
                }
            }

            &:first-child {
                @include player-border;
                border-right: none;
                border-top-right-radius: 0%;
                border-bottom-right-radius: 0%;

                >div {
                    border-left-color: $menu-frame-bg;
                }
            }

            &:not(:first-child):not(:last-child) {
                @include player-border;
                border-left: none;
                border-top-left-radius: 0%;
                border-bottom-left-radius: 0%;
                border-top-right-radius: 0%;
                border-bottom-right-radius: 0%;
                border-right: none;
            }

            &:last-child {
                @include player-border;
                border-left: none;
                border-top-left-radius: 0%;
                border-bottom-left-radius: 0%;

                >div {
                    border-right: none;
                }
            }

            width: $frame-width;
            height: $frame-height;
            border: $frame-bw solid grey;
            background-color: #EEEE;
            border-radius: 8px;
            border-style: double;
        }
    }

    .menu {
        display: flex;
        flex-direction: column;
        position: absolute;
        width: 100%;
        height: 100%;

        &::before {
            content: '\A';
            display: inline-block;
            position: relative;
            flex-grow: 1;
        }


        >.options {
            display: flex;
            flex-direction: row;
            width: 100%;

            >div {
                text-align: center;
            }

            >div#Portrait {
                background-color: orange;
                width: 128px;
                height: 128px;

                &::after {
                    content: url('..\\assets\\sprites\\portrait.jpg');
                    width: 128px;
                    height: 128px;
                }
            }

            @mixin item {
                background-color: black;
                border-radius: 8px;
                width: 128px;
                height: 128px;
                transform-origin: top left;
                transform: scale(97%, 97%);

                border: 4px solid gold;
                box-shadow: 2px 2px 0px 2px darkred;

                &:hover {
                    transform-origin: bottom center;
                    transform: scale(110%);
                    z-index: 1;
                }

                >img {
                    width: 100%;
                    height: 100%;
                }
            }

            >div#Gap {
                flex-grow: 1;
            }

            >.actions {
                display: flex;
            }

            >.actions>.menu-actions {
                @include item;
            }

            >.actions>.menu-actions:first-child {
                &:hover {
                    transform-origin: bottom left;
                    transform: scale(110%);
                    z-index: 1;
                }
            }

            >.actions>.menu-actions:last-child {
                &:hover {
                    transform-origin: bottom right;
                }
            }

            >div#Menu-Focused {

                >div {
                    display: flex;
                    align-items: center;
                    height: 100%;
                    background-color: $menu-frame-bg;
                }

                >div>div {
                    @include menu-border;
                    padding: 16px;
                    text-align: left;
                }

                width: 256px;
                height: 100px;
                border: 14px solid grey;
                background-color: lightgrey;
                border-radius: 8px;
                border-style: double;
            }
        }
    }
}

